--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+        <color name="primaryColor">#ff9800</color>
+        <color name="primaryLightColor">#ffc947</color>
+        <color name="primaryDarkColor">#c66900</color>
+        <color name="secondaryColor">#40c4ff</color>
+        <color name="secondaryLightColor">#82f7ff</color>
+        <color name="secondaryDarkColor">#0094cc</color>
+        <color name="primaryTextColor">#000000</color>
+        <color name="secondaryTextColor">#000000</color>
 </resources>
