--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="4dp"
-    app:cardBackgroundColor="@color/secondaryColor">
+    android:id="@+id/noteBackStrip"
+    app:cardBackgroundColor="@android:color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
