--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,14 @@
         <color name="primaryColor">#ff9800</color>
         <color name="primaryLightColor">#ffc947</color>
         <color name="primaryDarkColor">#c66900</color>
+
+        <color name="colorAccent">#40c4ff</color>
+
         <color name="secondaryColor">#40c4ff</color>
         <color name="secondaryLightColor">#82f7ff</color>
         <color name="secondaryDarkColor">#0094cc</color>
+
         <color name="primaryTextColor">#000000</color>
         <color name="secondaryTextColor">#000000</color>
+        <color name="dividerColor">#757575</color>
 </resources>
