Add search for RecyclerView

--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -56,7 +56,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/category_name" />
+                android:hint="@string/category_name"
+                android:inputType="textAutoComplete|textCapWords" />
 
             <Button
                 android:id="@+id/addCategoryBtn"
